--- a/app/views/layouts/mailer.html.slim
+++ b/app/views/layouts/mailer.html.slim
@@ -2,5 +2,12 @@ doctype html
 html
   head
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
+    sass:
+      *
+        font-family: "Helvetica Neue", Helvetica, Arial, Sans-Serif
+      .address
+        font-size: 0.9em
+        color: gray
+
   body
     == yield
