use bcc for internal message and generate text version for email

--- a/app/views/booking_mailer/booking_confirmation_email.html.slim
+++ b/app/views/booking_mailer/booking_confirmation_email.html.slim
@@ -5,87 +5,110 @@ p
     die eingegangenen Anmeldedaten. Eine Anmeldebestätigung und die Rechnung senden wir
     Ihnen ca. zwei Wochen vor dem Seminartermin an Ihre Rechnungsadresse zu.
 
-h4
-  | Seminar
-  = @seminar.title
-p
-  strong> Seminar-Nr.:
-  = @seminar.number
-p
-  strong> Datum:
-  = @seminar.dates.map { |date| ldate date }.join('; ').html_safe
-p
-  strong> Zeit:
-  = @seminar.events.map(&:time).uniq.compact.join('; ').html_safe
-p
-  strong> Referenten:
-  = @seminar.teachers.map(&:name).join(', ').html_safe
-p
-  strong> Ort:
-  = @seminar.location.name
-p
-  strong> Gebühr:
-  = @seminar.price_text.html_safe
+table
+  tr
+    th Seminar
+    td = @seminar.title
+  tr
+    th Seminar-Nr.
+    td= @seminar.number
+  tr
+    th Datum
+    td = @seminar.dates.map { |date| ldate date }.join('; ').html_safe
+  tr
+    th Zeit
+    td = @seminar.events.map(&:time).uniq.compact.join('; ').html_safe
+  tr
+    th Referent(en)
+    td = @seminar.teachers.map(&:name).join(', ').html_safe
+  tr
+    th Ort
+    td = @seminar.location.name
+  tr
+    th Gebühr
+    td = @seminar.price_text.html_safe
+
+  tr
+    th Teilnehmer
+    td
+      - @booking.attendees.each do |attendee|
+        = attendee.name
+        br
+  tr
+    th Kontakt
+    td
+      = @booking.contact_email
+      | ,
+      span< title="Telefon" = @booking.contact_phone
+      - if @booking.contact_fax.present?
+        | ,
+        =<> @booking.contact_fax
+        | (Fax)
+      - if @booking.contact_mobile.present?
+        | ,
+        =<> @booking.contact_mobile
+        | (Mobil)
+
+  tr
+    th Rechnungsadresse
+    td
+      - if @booking.contact_person.present?
+        = @booking.contact_person
+        br
+      = @booking.address_street
+      br
+      => @booking.address_zip
+      = @booking.address_city
+
+  - if @booking.member || @booking.member_institution || @booking.graduate
+    tr
+      th Paritätische
+      td
+        - if @booking.member
+          | Mitglied im PARITÄTISCHEN LSA:
+        - if @booking.member_institution
+          | Einrichtung des PARITÄTISCHEN LSA:
+        - if @booking.graduate
+          | Absolvent*in der Fachschule:
+          => @booking.school
+          = @booking.year
 
 
-h4 Teilnehmer:
 p
-  - @booking.attendees.each do |attendee|
-    = attendee.name
-    br
-h4 Kontakt:
-p = @booking.contact_email
-p title="Telefon" = @booking.contact_phone
-- if @booking.contact_fax.present?
-  p title="Fax" = @booking.contact_fax
-- if @booking.contact_mobile.present?
-  p title="Mobil" = @booking.contact_mobile
-
-h4 Rechnungsadresse
-p
-  - if @booking.contact_person.present?
-    = @booking.contact_person
-    br
-  = @booking.address_street
+  |  Freundliche Grüße
   br
-  => @booking.address_zip
-  = @booking.address_city
-
-- if @booking.member || @booking.member_institution || @booking.graduate
-  h4 Paritätische
-  p
-    - if @booking.member
-      | Mitglied im PARITÄTISCHEN LSA:
-    - if @booking.member_institution
-      | Einrichtung des PARITÄTISCHEN LSA:
-    - if @booking.graduate
-      | Absolvent*in der Fachschule:
-      => @booking.school
-      = @booking.year
-
-
-p Freundliche Grüße
-
+  | PARITÄTISCHES Bildungswerk
+    (PBW)
 
 .address
-  p
-    | PARITÄTISCHES Bildungswerk
-      (PBW)
+  p www.bildungswerk-lsa.de bildungswerk@paritaet-lsa.de
 
   p
-    | www.bildungswerk-lsa.de
-      bildungswerk@paritaet-lsa.de
+    | Landesverband Sachsen-Anhalt e.V.
+    br
+    | Wiener Str. 2
+    br
+    | 39112 Magdeburg
 
   p
-    |
-      Landesverband Sachsen-Anhalt e.V.
-      Wiener Str. 2
-      39112 Magdeburg
+    | Tel. 0391/6293-311
+    br
+    | Fax. 0391/6293-555
 
-  p Tel. 0391/6293-311
-  p Fax. 0391/6293-555
+  p
+    | Amtsgericht Magdeburg, Vereinsregister Nr. VR 1430
+    br
+    | USt-Nr.: 101/142/02695
+    br
+    | Vorstandsvorsitzende:
+    br
+    | Dr. Gabriele Girke
 
-  p Amtsgericht Magdeburg, Vereinsregister Nr. VR 1430
-  p USt-Nr.: 101/142/02695
-  p Vorstandsvorsitzende:
-  p Dr. Gabriele Girke
+sass:
+  table
+    th, td
+      vertical-align: top
+    th
+      text-align: right
+      padding-right: 20px
+      padding-bottom: 10px
