--- a/app/views/booking_mailer/booking_confirmation_email.html.slim
+++ b/app/views/booking_mailer/booking_confirmation_email.html.slim
@@ -7,108 +7,83 @@ p
 
 table
   tr
-    th Seminar
+    th = Seminar.model_name.human
     td = @seminar.title
   tr
-    th Seminar-Nr.
+    th = Seminar.human_attribute_name :number
     td= @seminar.number
   tr
-    th Datum
+    th = Seminar.human_attribute_name :date
     td = @seminar.dates.map { |date| ldate date }.join('; ').html_safe
   tr
-    th Zeit
+    th = Seminar.human_attribute_name :time
     td = @seminar.events.map(&:time).uniq.compact.join('; ').html_safe
   tr
-    th Referent(en)
+    th = Teacher.model_name.human count: @seminar.teachers.count
     td = @seminar.teachers.map(&:name).join(', ').html_safe
   tr
-    th Ort
+    th = Seminar.human_attribute_name :location
     td = @seminar.location.name
   tr
-    th Gebühr
-    td = @seminar.price_text.html_safe
+    th = Seminar.human_attribute_name :price_text
+    td #{@seminar.price_text.html_safe} <br><br>
 
-  tr
-    th Teilnehmer
-    td
-      - @booking.attendees.each do |attendee|
-        = attendee.name
-        br
+  tr.attendee
+    th = Attendee.model_name.human(count: @booking.attendees.count)
+    td = @booking.attendees.map(&:name).join('<br>').html_safe
   tr
     th Kontakt
     td
-      = @booking.contact_email
-      | ,
-      span< title="Telefon" = @booking.contact_phone
+      p = @booking.contact_email
+      p = @booking.contact_phone
       - if @booking.contact_fax.present?
-        | ,
-        =<> @booking.contact_fax
-        | (Fax)
+        p #{@booking.contact_fax} (Fax)
       - if @booking.contact_mobile.present?
-        | ,
-        =<> @booking.contact_mobile
-        | (Mobil)
+        p #{@booking.contact_mobile} (Mobil)
 
   tr
-    th Rechnungsadresse
+    th = Booking.human_attribute_name(:invoice_address)
     td
-      - if @booking.contact_person.present?
-        = @booking.contact_person
-        br
-      = @booking.address_street
-      br
-      => @booking.address_zip
-      = @booking.address_city
+      p = @booking.contact_person if @booking.contact_person.present?
+      p = @booking.address_street
+      p #{@booking.address_zip} #{@booking.address_city}
 
   - if @booking.member || @booking.member_institution || @booking.graduate
     tr
       th Paritätische
       td
-        - if @booking.member
-          | Mitglied im PARITÄTISCHEN LSA:
-        - if @booking.member_institution
-          | Einrichtung des PARITÄTISCHEN LSA:
+        p = t('simple_form.labels.booking.member') if @booking.member
+        p = t('simple_form.labels.booking.member_institution') if @booking.member_institution
         - if @booking.graduate
-          | Absolvent*in der Fachschule:
-          => @booking.school
-          = @booking.year
+          p #{t('simple_form.labels.booking.graduate')}: #{@booking.school} #{@booking.year}
 
 
-p
-  |  Freundliche Grüße
-  br
-  | PARITÄTISCHES Bildungswerk
-    (PBW)
+p Freundliche Grüße <br> PARITÄTISCHES Bildungswerk <br> (PBW)
 
 .address
   p www.bildungswerk-lsa.de bildungswerk@paritaet-lsa.de
+  p Landesverband Sachsen-Anhalt e.V. <br>
+    Wiener Str. 2 <br>
+    39112 Magdeburg
 
-  p
-    | Landesverband Sachsen-Anhalt e.V.
-    br
-    | Wiener Str. 2
-    br
-    | 39112 Magdeburg
+  p Tel. 0391/6293-311 <br>
+    Fax. 0391/6293-555
 
-  p
-    | Tel. 0391/6293-311
-    br
-    | Fax. 0391/6293-555
-
-  p
-    | Amtsgericht Magdeburg, Vereinsregister Nr. VR 1430
-    br
-    | USt-Nr.: 101/142/02695
-    br
-    | Vorstandsvorsitzende:
-    br
-    | Dr. Gabriele Girke
+  p Amtsgericht Magdeburg, Vereinsregister Nr. VR 1430 <br>
+    USt-Nr.: 101/142/02695 <br>
+    Vorstandsvorsitzende: <br>
+    Dr. Gabriele Girke
 
 sass:
   table
+    p
+      margin: 0
     th, td
       vertical-align: top
     th
       text-align: right
       padding-right: 20px
       padding-bottom: 10px
+    tr.attendee
+      th, td
+        padding-top: 30px
