--- a/app/views/visitors/index.html.slim
+++ b/app/views/visitors/index.html.slim
@@ -1,21 +1,23 @@
 - content_for :page_title, 'Seminarübersicht'
 - if @category
   - parent = @category.parent? ? @category : @category.category
-  .row
+  .row.categories
     .col-md-6
-      h4 Thema
-      ul.list-unstyled
+      /h4 Thema
+      ul.nav.nav-pills.nav-stacked
         - @categories.each do |category|
           li class=('active' if parent == category)
-            - label = category.display_name
+            - sem_count = @seminars_count[category.id]
+            - sem_count = sem_count.is_a?(Hash) ? sem_count.values.sum : sem_count.to_i
+            - label = "#{category.display_name} (#{sem_count})"
             = link_to label, root_url(category_id: category.id), title: label
     .col-md-6
-      h4 Unterthema
+      /h4 Unterthema
       - if @category
-        ul.list-unstyled
+        ul.nav.nav-pills.nav-stacked
           - parent.categories.order(:number, :name).each do |category|
             li class=('active' if @category == category)
-              - label = category.display_name
+              - label = "#{category.display_name} (#{@seminars_count.dig(parent.id, category.id).to_i})"
               = link_to label, root_url(category_id: category.id), title: label
 
 table.seminars.table
@@ -33,53 +35,17 @@ sass:
     input
       input
         border-radius: 14px
-        /*border: 1px solid lightgrey*/
         font-size: large
-  section
-    /*width: 100%*/
-    /*height: 330px*/
-    /*margin: auto*/
-    /*padding: 10px*/
-    /*.categories*/
-      width: 45%
-      height: 330px
-      float: left
-      font-size: 1.1em
-    /*.subcategories*/
-      margin-left: 50%
-      height: 330px
-      ol
-        list-style-type: lower-latin
-    /*ol*/
-      /*list-style: none*/
-      padding-left: 17px
-      li
-        padding: 5px
-        &.active
-          a
-            font-weight: bold
-          /*list-style: disc*/
-          /*background: grey*/
-    /*a*/
-      color: red
-      text-decoration: none
-      &:hover
-        text-decoration: underline
 
   table.seminars
     margin: 30px 0 50px
-    /*width: 100%*/
     td
-      /*padding: 3px 3px 10px*/
-      /*vertical-align: top*/
-      /*border-top: 1px dotted lightgray*/
       &.number
         width: 100px
       &.title
         width: 280px
 
-      /*a*/
-        color: #015ba7
-        text-decoration: none
-        &:hover
-          text-decoration: underline
+  .categories
+    ul
+      a
+        padding: 3px 8px
