--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for(@booking) do |f|
+= simple_form_for(@booking, defaults: { label: false }) do |f|
   = f.input :seminar_id, as: :hidden
 
   .row style="padding-top: 30px"
@@ -11,8 +11,8 @@
           .attendee class=('new-record' if attendee.new_record?)
             = attendee_form.input :_destroy, as: :hidden, input_html: { value: attendee.new_record? }
             .row
-              .col-md-6 = attendee_form.input :first_name, label: false
-              .col-md-6 = attendee_form.input :last_name,  label: false
+              .col-md-6 = attendee_form.input :first_name
+              .col-md-6 = attendee_form.input :last_name
 
         .row
           .col-md-1 = link_to fa_icon('plus', text: 'Teilnehmer hinzufügen'), '#',
@@ -21,33 +21,33 @@
       fieldset
         legend Kontakt
         .row
-          .col-md-6 = f.input :contact_email,  as: :email, label: false
-          .col-md-6 = f.input :contact_phone,  as: :tel, label: false
-          .col-md-6 = f.input :contact_fax,    as: :tel, label: false
-          .col-md-6 = f.input :contact_mobile, as: :tel, label: false
+          .col-md-6 = f.input :contact_email,  as: :email
+          .col-md-6 = f.input :contact_phone,  as: :tel
+          .col-md-6 = f.input :contact_fax,    as: :tel
+          .col-md-6 = f.input :contact_mobile, as: :tel
 
       fieldset
         legend = Booking.human_attribute_name(:invoice_address)
         .row
-          .col-md-6 = f.input :contact_person, label: false
+          .col-md-6 = f.input :contact_person
         .row
-          .col-md-5 = f.input :address_street, label: false
-          .col-md-2 = f.input :address_zip,  as: :tel, label: false
-          .col-md-5 = f.input :address_city, label: false
+          .col-md-5 = f.input :address_street
+          .col-md-2 = f.input :address_zip,  as: :tel
+          .col-md-5 = f.input :address_city
 
       fieldset
         legend Paritätische
         .row
-          .col-md-6 = f.input :member
-          .col-md-6 = f.input :member_institution
+          .col-md-6 = f.input :member, label: t('.member')
+          .col-md-6 = f.input :member_institution, label: t('.member_institution')
         .row
-          .col-md-4 = f.input :graduate
-          .col-md-4 = f.input :school, collection:t('bookings.schools'), prompt: t('simple_form.labels.booking.school'), label: false
-          .col-md-4 = f.input :year, label: false
+          .col-md-4 = f.input :graduate, label: t('.graduate')
+          .col-md-4 = f.input :school, collection:t('bookings.schools'), include_blank: false
+          .col-md-4 = f.input :year
 
       fieldset
         legend AGB
-        = f.input :terms_of_service, as: :boolean, required: true
+        = f.input :terms_of_service, as: :boolean, required: true, label: t('.terms_of_service')
 
   .row.action-buttons
     .col-md-8
