--- a/app/views/seminars/show.html.slim
+++ b/app/views/seminars/show.html.slim
@@ -31,22 +31,11 @@ ol.breadcrumb
     = render 'seminars/show/bookings'
     = render 'seminars/show/attendees'
   .col-md-6
-    - if @seminar.sub_modules.any?
-      = panel_box_with_table title: 'Module' do
-        table.standard-table
-          - @seminar.sub_modules.order(:number).each do |sub_module|
-            tr
-              td = link_to sub_module.number, sub_module
-              td = sub_module.teachers.map(&:name).join(', ').html_safe
-              td = sub_module.dates.map { |date| ldate date }.join('<br>').html_safe
-              td = sub_module.price
+    = render 'seminars/show/sub_modules'
     .row
       .col-md-6 = render 'seminars/show/teachers'
-      .col-md-6
-        p
-          - location = @seminar.location
-          - if location
-            = link_to icon_for(location, text: location.name, size: 2), location
+      - location = @seminar.location
+      .col-md-6 = link_to icon_for(location, text: location.name, size: 2), location if location
     = render 'seminars/show/events'
     = render 'seminars/show/categories'
 
