--- a/app/views/seminars/show/_events.html.slim
+++ b/app/views/seminars/show/_events.html.slim
@@ -1,8 +1,9 @@
-= panel_box_with_table title: Seminar.human_attribute_name(:events), toggle: true do
-  table.standard-table
-    - @seminar.events.order(:date).each do |event|
-      tr
-        td = ldate event.date
-        td #{event.start_time} - #{event.end_time}
-        /td = link_to event.location.name, event.location
-        td = event.notes
+- if strip_tags(@seminar.date_text || '').blank?
+  = panel_box_with_table title: Seminar.human_attribute_name(:events), toggle: true do
+    table.standard-table
+      - @seminar.dates.each do |date|
+        tr
+          td = ldate date
+- else
+  = panel_box title: Seminar.human_attribute_name(:events), toggle: true do
+    = @seminar.date_text.html_safe
