--- a/app/views/visitors/index.html.slim
+++ b/app/views/visitors/index.html.slim
@@ -1,4 +1,5 @@
 - content_for :page_title, 'Seminarübersicht'
+- content_for :back_link, link_to('&laquo; zur Seminarübersicht'.html_safe, root_path) if @query.present?
 - if @category
   - parent = @category.parent? ? @category : @category.category
   .row.categories
