--- a/app/views/seminars/show.html.slim
+++ b/app/views/seminars/show.html.slim
@@ -14,6 +14,7 @@ ol.breadcrumb
 
 .page-header
   .buttons
+    => link_to fa_icon('external-link', text: 'Externe Ansicht'), seminar_visitor_url(@seminar), class: 'btn btn-default'
     => edit_link edit_seminar_url(@seminar)
     = copy_link new_seminar_url(copy_from: @seminar.id)
   h2
