--- a/app/views/layouts/mailer.html.slim
+++ b/app/views/layouts/mailer.html.slim
@@ -9,5 +9,15 @@ html
         font-size: 0.9em
         color: gray
 
+      table
+        p
+          margin: 0
+        td
+          vertical-align: top
+          padding-right: 20px
+          padding-bottom: 10px
+        tr.attendee
+          th, td
+            padding-top: 30px
   body
     == yield
