--- a/app/views/bookings/index.html.slim
+++ b/app/views/bookings/index.html.slim
@@ -3,6 +3,8 @@
   /= new_link new_booking_path
   h2 = title_for @bookings
 
+= paginate @bookings
+
 .table-responsive
   table.standard-table.table-clickable
     thead
@@ -26,3 +28,4 @@
             - else
               = link_to 'Rechnung schreiben', new_invoice_path(booking_id: booking.id), class: 'btn btn-primary'
 
+= paginate @bookings
