--- a/app/views/seminars/_form.html.slim
+++ b/app/views/seminars/_form.html.slim
@@ -21,6 +21,7 @@
         a aria-controls="settings" data-toggle="tab" href="#notes" role="tab"  Bemerkungen
     .tab-content
       #general.tab-pane.active role="tabpanel"
+        = f.input :archived
         = f.association :parent,
             label_method: ->(s){ "#{s.number} - #{s.title}" },
             collection: Seminar.where(parent_id: nil).order(:number),
